plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.poppang'
version = '0.0.1-SNAPSHOT'
description = 'poppang-be-test'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    google()
}

dependencies {

    // --- Spring ---
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // --- DB ---
    runtimeOnly 'com.mysql:mysql-connector-j'

    // --- Lombok ---
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // --- Apple(JWT) ---
    implementation 'com.nimbusds:nimbus-jose-jwt:10.3'

    // --- Google ---
    implementation 'com.google.api-client:google-api-client:2.2.0'

    // Jackson2 JSON 팩토리 (반드시 필요)
    implementation 'com.google.http-client:google-http-client-jackson2:1.43.2'

    // --- Swagger ---
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

tasks.named('test') {
    useJUnitPlatform()
}
